// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaProvider .responsify() should not responsify already responsive element 1`] = `
<body>
  <div>
    <div
      class="css-1t9591k"
    >
      <iframe
        allow="autoplay; fullscreen"
        allowfullscreen=""
        frameborder="0"
        src="https://player.vimeo.com/video/326436012?autoplay=1&title=0&byline=0&portrait=0"
        style="position:absolute;top:0;left:0;width:100%;height:100%;"
      />
    </div>
  </div>
</body>
`;

exports[`MediaProvider .responsify() should responsify a dom container 1`] = `
<body>
  <div
    class="css-1t9591k"
  >
    <iframe />
  </div>
</body>
`;
